--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "2.6.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "parcel": "^2.6.2",
