--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://valentinoconti.github.io/colorColumns",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --out-dir docs --public-url ./",
+    "build": "parcel build index.html --dist-dir docs --public-url ./",
     "test": "./node_modules/.bin/jest --coverage"
   },
   "dependencies": {
@@ -14,11 +14,25 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.18.6",
+    "@parcel/babel-preset-env": "^2.6.2",
     "@parcel/transformer-sass": "2.6.2",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "babel-jest": "^28.1.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "parcel": "^2.6.2",
     "process": "^0.11.10"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss|png|gif)$": "babel-jest"
+    }
   },
   "license": "MIT"
 }
